--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 ﻿requests==2.25.1
 numpy==1.20.3
-pandas==1.2.4
+pandas>=1.3.0,<2.0.0
 scipy==1.6.3
 pandas_datareader==0.9.0
 beautifulsoup4==4.9.3
