--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
-﻿requests==2.25.1
-numpy==1.20.3
-pandas==1.2.4
-scipy==1.6.3
-pandas_datareader==0.9.0
-beautifulsoup4==4.9.3
-PyYAML==5.4.1
-yahoo-fin==0.8.9.1
-requests_html==0.10.0
+#﻿requests==2.25.1
+#numpy==1.20.3
+#pandas==1.2.4
+#scipy==1.6.3
+#pandas_datareader==0.9.0
+#beautifulsoup4==4.9.3
+#PyYAML==5.4.1
+#yahoo-fin==0.8.9.1
+#requests_html==0.10.0
+
+yfinance==0.2.36
+pandas==1.5.3
+numpy==1.23.5
+scipy==1.10.1
+requests==2.31.0
+PyYAML==6.0
+beautifulsoup4==4.12.2
+pandas_datareader==0.10.0
+
