--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 # Data Retrieval
 # Available Sources: YAHOO, TD_AMERITRADE
-DATA_SOURCE: YAHOO
+DATA_SOURCE: STOOQ
 
 # Not needed if you use YAHOO
 API_KEY: Your_API_Key
